--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ sites/simpletest
 
 # Ignore SimpleTest multi-site environment.
 # simpletest
+
+# Ignore node_modules in theme folder
+themes/storygen/node_modules
