override classy css

--- a/themes/storygen/storygen.info.yml
+++ b/themes/storygen/storygen.info.yml
@@ -13,3 +13,8 @@ regions:
   content: 'Content'
   footer: 'Footer'
   copyright: 'Copyright'
+libraries-override:
+  classy/base:
+    css:
+      component:
+        css/components/menu.css: css/style.css
